--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
         <link rel="stylesheet" href="./style/output.css">
-
-    <title></title>
+        <link rel="icon" href="./images/svgs/logo.svg" type="image/svg">
 </head>
-<body>
+<body class="font-Dana">
 </body>
 </html>
+
+
+
+
